Adjust the size of the articles summary on enterteinment when on mobile

--- a/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
@@ -6,25 +6,25 @@
         <mat-tab label="DEPORTE">
             <div class="row article-summary-container">
                 <ant-article-summary [isTextVisible]="false" [isMetadataVisible]="true" *ngFor="let article of sportArticles | async"
-                    [article]="article" class="col-xs-12 col-md-4 w-auto"></ant-article-summary>
+                    [article]="article" class="col-xs-12 col-md-4 w-auto entertainment-article"></ant-article-summary>
             </div>
         </mat-tab>
         <mat-tab label="CINE">
             <div class="row article-summary-container">
                 <ant-article-summary [isTextVisible]="false" [isMetadataVisible]="false" *ngFor="let article of cinemaArticles | async"
-                    [article]="article" class="col-xs-12 col-md-4 w-auto"></ant-article-summary>
+                    [article]="article" class="col-xs-12 col-md-4 w-auto entertainment-article"></ant-article-summary>
             </div>
         </mat-tab>
         <mat-tab label="LITERATURA">
             <div class="row article-summary-container">
                 <ant-article-summary [isTextVisible]="false" [isMetadataVisible]="false" *ngFor="let article of literatureArticles | async"
-                    [article]="article" class="col-xs-12 col-md-4 w-auto"></ant-article-summary>
+                    [article]="article" class="col-xs-12 col-md-4 w-auto entertainment-article"></ant-article-summary>
             </div>
         </mat-tab>
         <mat-tab label="CULTURA">
             <div class="row article-summary-container">
                 <ant-article-summary [isTextVisible]="false" [isMetadataVisible]="false" *ngFor="let article of cultureArticles | async"
-                    [article]="article" class="col-xs-12 col-md-4 w-auto"></ant-article-summary>
+                    [article]="article" class="col-xs-12 col-md-4 w-auto entertainment-article"></ant-article-summary>
             </div>
         </mat-tab>
 
