--- a/libs/shared/src/lib/modules/ui-carousel/dots/dots.component.scss
+++ b/libs/shared/src/lib/modules/ui-carousel/dots/dots.component.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/ant';
+
 :host {
   position: absolute;
   display: inline-block;
@@ -22,8 +24,17 @@
   -ms-flex-pack: center;
   justify-content: center;
   position: inherit;
-  margin-top: -9rem;
+  margin-top: 6rem;
   margin-bottom: 2rem;
+
+  @include media-breakpoint('xs') {
+    margin-top: 0;
+    margin-bottom: 2rem;
+    position: absolute;
+    top: 65%;
+    right: 39%;
+    background: #0404042e;
+  }
 }
 
 :host(.middle) {
