Remove padding from main section when on mobile

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.scss
@@ -1,4 +1,10 @@
+@import '../../../../core/scss/ant';
+
 .main-section {
   padding: 0 15%;
   overflow: hidden;
+
+  @include media-breakpoint('xs') {
+    padding: 0;
+  }
 }
