--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -6,7 +6,7 @@
       alt="{{article?.mainPicture?.seoFileName}}">
   </div>
 
-  <div [ngClass]="{'main-article-summary-content__positioned': isTopArticle, 'clearfix': isTopArticle}">
+  <div [ngClass]="{'main-article-summary-content__positioned': isTopArticle}">
     <div class="main-article-summary-content" fxLayout="column" fxLayoutAlign="flex-start center">
       <h4 *ngIf="isTitleVisible" class="article-summary-title">{{article?.title}}</h4>
       <p *ngIf="isTextVisible" class="article-summary-body">{{article?.body}}</p>
