--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -1,5 +1,10 @@
 <!-- NORMAL ARTICLE DISPLAY -->
-<a class="article-summary-outer-container" (click)="navigateTo(article?.id)" [ngClass]="{'article-summary-outer-container__rounded': !isTopArticle, 'article-summary-outer-container__shadowed': !isTopArticle, 'top-article': isTopArticle}">
+<a class="article-summary-outer-container" (click)="navigateTo(article?.id)" [ngClass]="{
+  'article-summary-outer-container__rounded': !isTopArticle, 'article-summary-outer-container__shadowed': !isTopArticle,
+  'top-article': isTopArticle,
+  'curiosity-article': isCuriosityHomeArticle,
+  'selected-curiosity': isCuriositySelected
+}">
 
   <div class="article-summary-img-container">
     <img class="article-image" [ngClass]="{'article-image__rounded': !isTopArticle}" src="{{article?.mainPicture?.relativePath}}"
