--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -4,9 +4,13 @@
 
   <section class="main-section">
 
-    <hav-outstanding-general-articles [carouselTime]="5000" [totalItems]="5" class="pt-40"></hav-outstanding-general-articles>
+    <hav-outstanding-general-articles [carouselTime]="5000" [totalItems]="5" class="pt-40 "></hav-outstanding-general-articles>
 
-    <hav-entertainment-preview class="pt-40"></hav-entertainment-preview>
+    <hav-entertainment-preview class="pt-40 "></hav-entertainment-preview>
+
+    <hav-outstanding-curiosities class="pt-40 "></hav-outstanding-curiosities>
+
+    <hav-impact-portal class="pt-40"></hav-impact-portal>
 
   </section>
 
