Remove general padding and add it for each section home if needded

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
@@ -1,4 +1,4 @@
-<div class="top-articles" fxLayout="column">
+<div class="top-articles feature-section__padded" fxLayout="column">
 
     <h1 fxFlexAlign="center" class="section-name">HAVANA TOP</h1>
 
