--- a/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column">
+<div class="feature-section__padded" fxLayout="column">
 
     <h1 fxFlexAlign="center" class="section-name" [routerLink]="'/section/entretenimiento'">ENTERTAINMENT</h1>
 
