--- a/apps/havana500-admin/src/app/features/layout/layout.component.html
+++ b/apps/havana500-admin/src/app/features/layout/layout.component.html
@@ -1,33 +1,46 @@
 <div class="container" [class.is-mobile]="mobileQuery.matches">
+  <!--
+    <mat-toolbar  class="toolbar mat-elevation-z1" *ngIf="authService.hasValidAccessToken()">
+  -->
+  <mat-toolbar
+    class="toolbar mat-elevation-z1 mat-accent-500-bg"
+    *ngIf="authService.hasValidAccessToken()"
+  >
+    <admin-toolbar
+      fxFill
+      (toggleSideNav)="snav.toggle()"
+      (closeSideNav)="snav.close()"
+    ></admin-toolbar>
+  </mat-toolbar>
 
-    <!-- <mat-toolbar  class="toolbar mat-elevation-z1" *ngIf="authService.hasValidAccessToken()"> -->
-    <mat-toolbar class="toolbar mat-elevation-z1 mat-white-500-bg" *ngIf="authService.hasValidAccessToken()">
-        <admin-toolbar fxFill (toggleSideNav)="snav.toggle()" (closeSideNav)="snav.close()"></admin-toolbar>
-    </mat-toolbar>
+  <mat-sidenav-container style="height:100%">
+    <mat-sidenav
+      class="sidenav nav mat-ant-dark-700-bg"
+      role="navigation"
+      #snav
+      [fixedInViewport]="true"
+      fixedTopGap="56"
+    >
+      <mat-nav-list>
+        <div class="navbar-header">
+          <div class="logo">
+            <img class="logo-icon" src="assets/images/logos/ant.svg" />
+            <span class="logo-text">HAVANA 500</span>
+          </div>
+        </div>
 
-    <mat-sidenav-container style="height:100%">
-        <mat-sidenav class="sidenav nav mat-ant-dark-700-bg" role="navigation" #snav [fixedInViewport]="true"
-            fixedTopGap="56">
+        <admin-nav-vertical-item
+          [item]="nav"
+          *ngFor="let nav of fillerNav"
+        ></admin-nav-vertical-item>
+      </mat-nav-list>
+    </mat-sidenav>
 
-            <mat-nav-list>
-
-                <div class="navbar-header">
-                    <div class="logo">
-                        <img class="logo-icon" src="assets/images/logos/ant.svg">
-                        <span class="logo-text">HAVANA 500</span>
-                    </div>
-                </div>
-
-                <admin-nav-vertical-item [item]="nav" *ngFor="let nav of fillerNav"></admin-nav-vertical-item>
-
-            </mat-nav-list>
-
-        </mat-sidenav>
-
-        <mat-sidenav-content [class.main-content]="authService.hasValidAccessToken()" role="main">
-            <admin-content></admin-content>
-        </mat-sidenav-content>
-
-    </mat-sidenav-container>
-
+    <mat-sidenav-content
+      [class.main-content]="authService.hasValidAccessToken()"
+      role="main"
+    >
+      <admin-content></admin-content>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
