Set blue the toolbar

--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class=" main-container" fxLayout="column">
-  <mat-toolbar class="toolbar mat-elevation-z1 mat-white-500-bg">
+  <mat-toolbar class="toolbar mat-elevation-z1 mat-accent-500-bg">
     <hav-toolbar fxFlexFill></hav-toolbar>
   </mat-toolbar>
 
