Start building outstanding gallery

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -1,10 +1,12 @@
 <main fxLayout="column">
-
   <hav-principal-slider></hav-principal-slider>
 
   <section class="main-section">
-
-    <hav-outstanding-general-articles [carouselTime]="5000" [totalItems]="5" class="pt-40 "></hav-outstanding-general-articles>
+    <hav-outstanding-general-articles
+      [carouselTime]="5000"
+      [totalItems]="3"
+      class="pt-40 "
+    ></hav-outstanding-general-articles>
 
     <hav-entertainment-preview class="pt-40 "></hav-entertainment-preview>
 
@@ -12,7 +14,6 @@
 
     <hav-impact-portal class="pt-40"></hav-impact-portal>
 
+    <hav-outstanding-gallery></hav-outstanding-gallery>
   </section>
-
-
 </main>
