Adjust entertainment preview for mobiles and add blue color to texts

--- a/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
@@ -1,34 +1,63 @@
 <div class="feature-section__padded" fxLayout="column">
+  <h1
+    fxFlexAlign="center"
+    class="section-name accent-500-fg"
+    [routerLink]="'/section/entretenimiento'"
+  >
+    ENTERTAINMENT
+  </h1>
 
-    <h1 fxFlexAlign="center" class="section-name" [routerLink]="'/section/entretenimiento'">ENTERTAINMENT</h1>
+  <mat-tab-group>
+    <mat-tab label="DEPORTE">
+      <div class="row article-summary-container">
+        <ant-article-summary
+          [isTextVisible]="false"
+          [isMetadataVisible]="false"
+          *ngFor="let article of (sportArticles | async)"
+          [article]="article"
+          class="col-xs-12 col-md-4 w-auto entertainment-article"
+        ></ant-article-summary>
+      </div>
+    </mat-tab>
+    <mat-tab label="CINE">
+      <div class="row article-summary-container">
+        <ant-article-summary
+          [isTextVisible]="false"
+          [isMetadataVisible]="false"
+          *ngFor="let article of (cinemaArticles | async)"
+          [article]="article"
+          class="col-xs-12 col-md-4 w-auto entertainment-article"
+        ></ant-article-summary>
+      </div>
+    </mat-tab>
+    <mat-tab label="LITERATURA">
+      <div class="row article-summary-container">
+        <ant-article-summary
+          [isTextVisible]="false"
+          [isMetadataVisible]="false"
+          *ngFor="let article of (literatureArticles | async)"
+          [article]="article"
+          class="col-xs-12 col-md-4 w-auto entertainment-article"
+        ></ant-article-summary>
+      </div>
+    </mat-tab>
+    <mat-tab label="CULTURA">
+      <div class="row article-summary-container">
+        <ant-article-summary
+          [isTextVisible]="false"
+          [isMetadataVisible]="false"
+          *ngFor="let article of (cultureArticles | async)"
+          [article]="article"
+          class="col-xs-12 col-md-4 w-auto entertainment-article"
+        ></ant-article-summary>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 
-    <mat-tab-group>
-        <mat-tab label="DEPORTE">
-            <div class="row article-summary-container">
-                <ant-article-summary [isTextVisible]="false" [isMetadataVisible]="true" *ngFor="let article of sportArticles | async"
-                    [article]="article" class="col-xs-12 col-md-4 w-auto entertainment-article"></ant-article-summary>
-            </div>
-        </mat-tab>
-        <mat-tab label="CINE">
-            <div class="row article-summary-container">
-                <ant-article-summary [isTextVisible]="false" [isMetadataVisible]="false" *ngFor="let article of cinemaArticles | async"
-                    [article]="article" class="col-xs-12 col-md-4 w-auto entertainment-article"></ant-article-summary>
-            </div>
-        </mat-tab>
-        <mat-tab label="LITERATURA">
-            <div class="row article-summary-container">
-                <ant-article-summary [isTextVisible]="false" [isMetadataVisible]="false" *ngFor="let article of literatureArticles | async"
-                    [article]="article" class="col-xs-12 col-md-4 w-auto entertainment-article"></ant-article-summary>
-            </div>
-        </mat-tab>
-        <mat-tab label="CULTURA">
-            <div class="row article-summary-container">
-                <ant-article-summary [isTextVisible]="false" [isMetadataVisible]="false" *ngFor="let article of cultureArticles | async"
-                    [article]="article" class="col-xs-12 col-md-4 w-auto entertainment-article"></ant-article-summary>
-            </div>
-        </mat-tab>
-
-    </mat-tab-group>
-
-    <a class="see-more-section" [routerLink]="'/section/entretenimiento'" fxFlexAlign=center>See More</a>
+  <a
+    class="see-more-section"
+    [routerLink]="'/section/entretenimiento'"
+    fxFlexAlign="center"
+    >See More</a
+  >
 </div>
