Finish styles of impact section

--- a/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.scss
@@ -29,6 +29,7 @@
   right: 0;
   left: 0;
   text-align: center;
-  color: white;
-  font-weight: 300;
+  color: #f8f9faa6;
+  font-weight: 900;
+  mix-blend-mode: screen;
 }
