Add countDown component to principal slider

--- a/apps/havana500-webclient/src/app/features/home/dummy/principal-slider/principal-slider.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/principal-slider/principal-slider.component.html
@@ -9,3 +9,8 @@
   [showArrows]="false"
 >
 </slideshow>
+
+<ant-countdown
+  class="countdown"
+  [eventDate]="getHavana500Moment()"
+></ant-countdown>
