Add style fixes to dots and top-articles

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.scss
@@ -2,13 +2,13 @@
 
 .top-articles {
   position: relative;
-  margin-top: 11rem;
+  margin-top: 3rem;
 
   min-height: 41rem;
-  max-height: 47rem;
+  // max-height: 47rem;
   @include media-breakpoint('xs') {
     min-height: 67rem;
-    max-height: 70rem;
+    // max-height: 70rem;
     margin-top: 4rem;
   }
 
