--- a/libs/shared/src/lib/modules/ui-carousel/dots/dots.component.scss
+++ b/libs/shared/src/lib/modules/ui-carousel/dots/dots.component.scss
@@ -24,8 +24,10 @@
   -ms-flex-pack: center;
   justify-content: center;
   position: inherit;
-  margin-top: 6rem;
+  margin-top: 4rem;
   margin-bottom: 2rem;
+  height: 10px;
+  align-items: center;
 
   @include media-breakpoint('xs') {
     margin-top: 0;
@@ -48,10 +50,10 @@
 }
 
 .dot {
-  height: 10px;
-  width: 10px;
+  height: 6px;
+  width: 6px;
   border-radius: 5px;
-  background: #818488;
+  background: #03a9f4;
   opacity: 0.6;
   margin: 0 4px;
   display: inline-block;
@@ -59,9 +61,11 @@
 
 .dot:hover {
   opacity: 0.8;
+  transform: scale(1.2);
   cursor: pointer;
 }
 
 .dot.active {
   opacity: 0.8;
+  transform: scale(1.2);
 }
