Prepare article summary for experiences articles

--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -6,7 +6,8 @@
     'article-summary-outer-container__shadowed': !isTopArticle,
     'top-article': isTopArticle,
     'curiosity-article': isCuriosityHomeArticle,
-    'selected-curiosity': isCuriositySelected
+    'selected-curiosity': isCuriositySelected,
+    'experience-article': isExperienceArticle
   }"
 >
   <div class="article-summary-img-container">
